# openscad-mcp-server

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  EXAMPLES.scad  LICENSE  Makefile  QUICKSTART.md  README.md  openscad-mcp-server.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
designs/doorknob_guard/: v11.scad
src/: error.rs  main.rs  openscad.rs
